Mark all as read and settings always show up

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -183,15 +183,13 @@
                 </div>
                 <button class="toolbar-item ml-2"
                         @click="markItemsRead()"
-                        v-if="filterSelected == 'unread'"
                         title="Mark All Read">
                     <span class="icon">{% inline "check.svg" %}</span>
                 </button>
                 <dropdown class="settings-dropdown"
                           toggle-class="btn btn-link toolbar-item px-2 ml-2"
                           drop="right"
-                          title="Feed Settings"
-                          v-if="!filterSelected && current.type == 'feed'">
+                          title="Feed Settings">
                     <template v-slot:button>
                         <span class="icon">{% inline "more-horizontal.svg" %}</span>
                     </template>
