Show settings for folder of feeds

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -199,6 +199,7 @@
                 </div>
                 <button class="toolbar-item ml-2"
                         @click="markItemsRead()"
+                        v-if="current.type == 'feed'"
                         title="Mark All Read">
                     <span class="icon">{% inline "check.svg" %}</span>
                 </button>
@@ -210,6 +211,7 @@
                 <dropdown class="settings-dropdown"
                           toggle-class="btn btn-link toolbar-item px-2 ml-2"
                           drop="right"
+                          v-if="current.type == 'feed'"
                           title="Feed Settings">
                     <template v-slot:button>
                         <span class="icon">{% inline "more-horizontal.svg" %}</span>
